css/mine.css
/* Global setting for my site */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
html {
    height: 100%;
    font-size: 14px;
}

body {
    font-family: "Arial", "Microsoft YaHei UI", "Microsoft YaHei", sans-serif;
    color: #484B4E;
    margin: 0 auto;
    padding: 0;
    overflow-x: hidden;
    background-color: #ccc;
    height: 100%;

    /* Fixed width of the whole page */
    max-width: 960px;
}

main {
    line-height: 2;
    font-size: 1.2rem;
    background-color: #f1f1f1;
}

section {
    text-align: center;
}

section > * {
    padding: 2rem 2rem 3rem 2rem;
}

section > header {
    line-height: 1.3;
}

.shortline {
    width: 5%;
    height: 5px;
    background-color: #069;
    display: inline-block;
}

section .content {
    padding-bottom: 5rem;
}

footer {
    background-color: #333;
    text-align: center;
    color: #fff;
}

footer p {
    padding: 2rem;
}

.pageheader nav {
    display: inline-block;
}

.pageheader nav a {
    color: #aaa;
    text-decoration: none;
    font-weight: bold;
    padding-right: 0.3rem;
    font-size: 0.8rem;
}

.pageheader nav a:hover {
    font-size: 1rem;
    color: #069;
}

.pageheader {
    position: relative;
    height: 100%;

    /* Setup background image */
    background: url("http://wx2.sinaimg.cn/large/0060lm7Tly1g2g3iynu3yj30go0u0my6.jpg") no-repeat center/cover;
    /* background: url("../images/5-2-small.jpg") no-repeat center/cover; */

    padding: 1.5rem;
}

/* use different font for logo and slogon */
.pageheader [class*="logo"] {
    font-family: "Merriweather";
}

.logo {
    font-size: 1.2rem;
    color: #069;
}

.slogon {
    top: 67%;
}

.pageheader > div {
    position: absolute;
    left: 7%;
}

.withus {
    font-size: 1.5rem;
}

.keyword {
    font-size: 5rem;
    color: #069;
}

.belief {
    background-color: #069;
    color: #fff;
    font-size: 2.8rem;
    font-weight: bold;
    margin: 0 0 2rem 0;;
    padding: 1.5rem;
}

[class|=col] {
    width: 100%;
    display: inline-block;
    vertical-align: top;
    margin-bottom: 3rem;
}

.icon {
    font-size: 5rem;
}

.card {
    padding: 0 1rem;
}

.card-head > p:first-of-type{
    font-weight: bold;
}

.desc {
    font-size: 1rem;
    text-align: justify;
    display: inline-block;
}

.contact {
    font-weight: bold;
    background: #2f3f5f;
    color: #fff;
}

.about .content {
    text-align: justify;
}

.poem {
    font-size: 1.1rem;
    font-style: italic;
    font-weight: bold;
}

.name {
    font-weight: bold;
    color: #069;
}

/* For large screen size */
@media screen and (min-width:600px) {
    html, body {
        font-size: 16px;
    }

    .pageheader {
        background: url("http://wx1.sinaimg.cn/large/0060lm7Tly1g2g3hmvydfj30qo0u0mya.jpg") no-repeat center/cover;
        /* background: url("../images/5-2.jpg") no-repeat center/cover; */
    }

    .col-3 {
        width: 32%;
    }

    .slogon {
        top: 71%;
    }

    .pageheader > div {
        left: 24%;
    }
}

